<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_3d"
        android:icon="@drawable/ic_3d"
        android:enabled="true"
        android:title="@string/title_3d" />

    <item
        android:id="@+id/navigation_coach"
        android:icon="@drawable/ic_group"
        android:enabled="true"
        android:title="@string/title_coach" />

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_share"
        android:enabled="true"
        android:title="@string/title_share" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:enabled="true"
        android:title="@string/title_profile" />

</menu>
