<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bowl.bowldev.FragmentProfile">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/profileImage"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_email"/>

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/userEmail"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_pass"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/no_account"
        android:layout_below="@id/signInButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or"
        android:text="@string/new_account"
        android:layout_centerHorizontal="true" />

</RelativeLayout>